[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Examples of ml model, techniques, and concepts."
authors = ["Brian Lubeck <blubeck7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.26.4"
pandas = "^2.2.2"
python = "^3.11"
scipy = "^1.13.0"
jupyterlab = "^4.2.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"


[tool.poetry.group.standard.dependencies]
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
